:wrench: Rename package

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="charset" content="utf-8" />
-    <title>Accessibility Guidelines</title>
+    <title>Staart</title>
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/png" href="/assets/icon-circle.png" />
     <link rel="icon" type="image/svg+xml" href="/assets/icon-purple.svg" />
@@ -23,7 +23,7 @@
     <header>
       <div>
         <img class="icon" alt="" src="/assets/icon-white.svg" />
-        <h1>Accessibility Guidelines</h1>
+        <h1>Staart</h1>
       </div>
     </header>
     <main id="content"></main>
@@ -90,10 +90,5 @@
         }
       }
     </script>
-    <!-- <script
-      async
-      defer
-      src="https://platform.oswaldlabs.com/_/accessibilityguidelines.js"
-    ></script> -->
   </body>
 </html>
