:lipstick: Change theme

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
       <div>
         <img class="icon" alt="" src="/assets/icon-white.svg" />
-        <h1>Staart</h1>
+        <h1>Build your startup with Staart</h1>
       </div>
     </header>
     <main id="content"></main>
