:bento: Update Staart icons

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta name="charset" content="utf-8" />
     <title>Staart</title>
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/png" href="/assets/icon-circle.png" />
-    <link rel="icon" type="image/svg+xml" href="/assets/icon-purple.svg" />
+    <link rel="icon" type="image/png" href="/assets/icon-dark.png" />
+    <link rel="icon" type="image/svg+xml" href="/assets/icon-dark.svg" />
     <link rel="canonical" href="https://accessibilityguidelines.com" />
     <!-- inject css -->
     <meta
@@ -52,7 +52,7 @@
         "@type": "WebSite",
         "name": "Accessibility Guidelines",
         "url": "https://accessibilityguidelines.com",
-        "logo": "https://accessibilityguidelines.com/assets/icon-purple.png",
+        "logo": "https://accessibilityguidelines.com/assets/icon-dark.png",
         "author": {
           "@type": "Person",
           "name": "Anand Chowdhary",
