:wrench: Update data for O15y

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/png" href="/assets/icon-dark.png" />
     <link rel="icon" type="image/svg+xml" href="/assets/icon-dark.svg" />
-    <link rel="canonical" href="https://accessibilityguidelines.com" />
+    <link rel="canonical" href="https://staart.js.org" />
     <!-- inject css -->
     <meta
       name="description"
-      content="Accessibility guidelines to make websites more disabled-friendly."
+      content="Staart helps you kickstart your SaaS startup with open-source starter projects written in TypeScript by O15Y.."
     />
     <meta
       name="keywords"
-      content="accessibility, accessibility guidelines, wcag, web accessibility, wai, oswald labs, anand chowdhary, a11y"
+      content="o15y, oswald labs, anand chowdhary, staart, saas, starter, typescript, nodejs, javascript"
     />
     <!-- <meta property="og:image" content="/assets/smo.png" /> -->
   </head>
@@ -32,13 +32,11 @@
         <p>
           &copy;
           <!-- year -->
-          <a href="https://anandchowdhary.com" target="_blank" rel="noopener"
-            >Anand Chowdhary</a
+          <a href="https://o15y.com" target="_blank" rel="noopener"
+            >O15Y</a
           >
-          <!-- <button onclick="window.agastya.open()">Accessibility</button> -->
-          &middot;
           <a
-            href="https://github.com/AnandChowdhary/accessibilityguidelines.com"
+            href="https://github.com/staart/staart.js.org"
             target="_blank"
             rel="noopener"
             >This page is open source</a
@@ -50,9 +48,9 @@
       {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "name": "Accessibility Guidelines",
-        "url": "https://accessibilityguidelines.com",
-        "logo": "https://accessibilityguidelines.com/assets/icon-dark.png",
+        "name": "Staart",
+        "url": "https://staart.js.org",
+        "logo": "https://staart.js.org/assets/icon-dark.png",
         "author": {
           "@type": "Person",
           "name": "Anand Chowdhary",
@@ -79,14 +77,8 @@
         },
         "funder": {
           "@type": "Organization",
-          "name": "Oswald Labs",
-          "url": "https://oswaldlabs.com",
-          "sameAs": [
-            "https://twitter.com/OswaldLabs",
-            "https://www.wikidata.org/wiki/Q27593967",
-            "https://en.wikipedia.org/wiki/Oswald_Labs",
-            "https://www.facebook.com/OswaldLabs"
-          ]
+          "name": "O15Y",
+          "url": "https://o15y.com"
         }
       }
     </script>
