:bug: Fix assets directory

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
       <div>
         <img class="icon" alt="" src="/assets/icon-white.svg" />
-        <h1>Build your startup with Staart</h1>
+        <h1>Staart</h1>
       </div>
     </header>
     <main id="content"></main>
@@ -32,9 +32,7 @@
         <p>
           &copy;
           <!-- year -->
-          <a href="https://o15y.com" target="_blank" rel="noopener"
-            >O15Y</a
-          >
+          <a href="https://o15y.com" target="_blank" rel="noopener">O15Y</a>
           <a
             href="https://github.com/staart/staart.js.org"
             target="_blank"
