--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         <img class="icon" alt="" src="/assets/icon-white.svg" />
         <h1>Staart</h1>
       </div>
+      <nav>
+        <div>
+          <a href="/backend">🛠️ Staart Backend</a>
+          <a href="/ui">🌐 Staart UI</a>
+          <a href="/native">📱 Staart Native</a>
+          <a href="/css">🎨 Staart.css</a>
+        </div>
+      </nav>
     </header>
     <main id="content"></main>
     <footer>
