:sparkles: Add first article

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/svg+xml" href="/assets/icon-dark.svg" />
     <link rel="canonical" href="https://staart.js.org" />
     <!-- inject css -->
+    <link rel="stylesheet" href="/assets/prism.css" />
     <meta
       name="description"
       content="Staart helps you kickstart your SaaS startup with open-source starter projects written in TypeScript by O15Y.."
@@ -88,5 +89,6 @@
         }
       }
     </script>
+    <script src="/assets/prism.js"></script>
   </body>
 </html>
