:sparkles: Add content

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
     <a href="#content" class="skip-link">Skip to main content</a>
     <header>
       <div>
-        <img class="icon" alt="" src="/assets/icon-white.svg" />
-        <h1>Staart</h1>
+        <a href="/">
+          <img class="icon" alt="" src="/assets/icon-white.svg" />
+          <h1>Staart</h1>
+        </a>
       </div>
       <nav>
         <div>
@@ -42,6 +44,7 @@
           &copy;
           <!-- year -->
           <a href="https://o15y.com" target="_blank" rel="noopener">O15Y</a>
+          <a href="/sitemap.html">Sitemap</a>
           <a
             href="https://github.com/staart/staart.js.org"
             target="_blank"
