:lipstick: Keep hover underline for nav

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a href="#content" class="skip-link">Skip to main content</a>
     <header>
       <div>
-        <a href="/">
+        <a href="/" class="logo">
           <img class="icon" alt="" src="/assets/icon-white.svg" />
           <h1>Staart</h1>
         </a>
